split tokens to have df for each letter

--- a/ParseToken.ipynb
+++ b/ParseToken.ipynb
@@ -16,9 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1049"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "dfLenRead = pd.read_hdf('DevHDF5/DocId.hdf5', 'docLen')\n",
@@ -75,6 +86,81 @@
    "source": [
     "# df = df_from_dict(idfDict)\n",
     "# df.to_hdf(f'DevHDF5/TermInfo.hdf5', key='idf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ToDo split into a-f etc and get top 10k words\n",
+    "\n",
+    "termDict = {} #{term:{{docIds:{docId}},df:dfNum}}\n",
+    "for term in invIndex['pos']:\n",
+    "    docSet = set()\n",
+    "    dfCount = len(invIndex['pos'][term])\n",
+    "    for docId in invIndex['pos'][term]:\n",
+    "        docSet.add(docId)\n",
+    "    termDict[term] = {'docIds':docSet, 'df':dfCount}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(termDict['artifici']['docIds'])\n",
+    "# print(termDict['artifici']['df'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_from_dict({'artifici':termDict['artifici']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from string import ascii_lowercase as alc\n",
+    "# for letter in alc:\n",
+    "#     print(letter)\n",
+    "#     df = pd.DataFrame()\n",
+    "#     for term in termDict:\n",
+    "#         if term.startswith(letter):\n",
+    "#             if term == 'self':\n",
+    "#                 df.insert(0, term, [termDict[term]['docIds'], termDict[term]['df']])\n",
+    "#             else:\n",
+    "#                 df = df.assign(**{term:termDict[term]})\n",
+    "#     df.to_hdf(f'DevHDF5/TermMeta.hdf5', key=letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from string import ascii_lowercase as alc\n",
+    "# abcSet = set()\n",
+    "# for letter in alc: abcSet.add(letter)\n",
+    "# df = pd.DataFrame()\n",
+    "# for term in termDict:\n",
+    "#     if term.isdigit():\n",
+    "#         num = int(term)\n",
+    "#         if ((num >= 0) and (num <= 5000)):\n",
+    "#             if(term[0] != '0'):\n",
+    "#                 print(term)\n",
+    "                # df = df.assign(**{term:termDict[term]})\n",
+    "# df.to_hdf(f'DevHDF5/TermMeta.hdf5', key='num')"
    ]
   }
  ],
