--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -36,63 +36,30 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://aiclub.ics.uci.edu/'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "url1 = pd.read_hdf(f'DevHDF5/Url{getNum(100)}.hdf5', '1')\n",
-    "url1.iat[0,0]"
+    "# url1 = pd.read_hdf(f'DevHDF5/Url{getNum(100)}.hdf5', '1')\n",
+    "# url1.iat[0,0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://archive.ics.uci.edu/ml/datasets/Adult'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dfUrl = pd.read_hdf('DevHDF5/DocId.hdf5', 'url')\n",
-    "dfUrl[500][0]"
+    "# dfUrl = pd.read_hdf('DevHDF5/DocId.hdf5', 'url')\n",
+    "# dfUrl[500][0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "170"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dfLenRead = pd.read_hdf('DevHDF5/DocId.hdf5', 'docLen')\n",
-    "dfLenRead[10][0]"
+    "# dfLenRead = pd.read_hdf('DevHDF5/DocId.hdf5', 'docLen')\n",
+    "# dfLenRead[10][0]"
    ]
   },
   {
@@ -102,8 +69,92 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artifici</th>\n",
+       "      <th>intellig</th>\n",
+       "      <th>uci</th>\n",
+       "      <th>shape</th>\n",
+       "      <th>the</th>\n",
+       "      <th>futur</th>\n",
+       "      <th>of</th>\n",
+       "      <th>ai</th>\n",
+       "      <th>follow</th>\n",
+       "      <th>us</th>\n",
+       "      <th>...</th>\n",
+       "      <th>143666023</th>\n",
+       "      <th>143666461</th>\n",
+       "      <th>10937</th>\n",
+       "      <th>10938</th>\n",
+       "      <th>serinc4</th>\n",
+       "      <th>82034127</th>\n",
+       "      <th>82034266</th>\n",
+       "      <th>99693470</th>\n",
+       "      <th>99693611</th>\n",
+       "      <th>2510003e04rik</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.579199</td>\n",
+       "      <td>4.359426</td>\n",
+       "      <td>3.519499</td>\n",
+       "      <td>7.113129</td>\n",
+       "      <td>4.158011</td>\n",
+       "      <td>7.826434</td>\n",
+       "      <td>3.076557</td>\n",
+       "      <td>6.514074</td>\n",
+       "      <td>5.424434</td>\n",
+       "      <td>6.672089</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "      <td>10.826702</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 356273 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "5.579199109398079"
+       "   artifici  intellig       uci     shape       the     futur        of  \\\n",
+       "0  5.579199  4.359426  3.519499  7.113129  4.158011  7.826434  3.076557   \n",
+       "\n",
+       "         ai    follow        us  ...  143666023  143666461      10937  \\\n",
+       "0  6.514074  5.424434  6.672089  ...  10.826702  10.826702  10.826702   \n",
+       "\n",
+       "       10938    serinc4   82034127   82034266   99693470   99693611  \\\n",
+       "0  10.826702  10.826702  10.826702  10.826702  10.826702  10.826702   \n",
+       "\n",
+       "   2510003e04rik  \n",
+       "0      10.826702  \n",
+       "\n",
+       "[1 rows x 356273 columns]"
       ]
      },
      "execution_count": 7,
@@ -112,24 +163,14 @@
     }
    ],
    "source": [
-    "dfIdf = pd.read_hdf('DevHDF5/TermInfo.hdf5', 'idf')\n",
-    "dfIdf['artifici'][0]"
+    "dfIdf = pd.read_hdf('DevHDF5/TermIdf.hdf5', 'idf')\n",
+    "dfIdf['artifici'][0]\n",
+    "dfIdf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from HelperClass import InvertedIndex\n",
-    "invIndex = InvertedIndex()\n",
-    "invIndex.loadAll('DevShelve')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +323,7 @@
        "[2 rows x 3183 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
