create DocId hdf5 file

--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,36 +30,6 @@
    "source": [
     "def getNum(docId:int):\n",
     "    return ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# url1 = pd.read_hdf(f'DevHDF5/Url{getNum(100)}.hdf5', '1')\n",
-    "# url1.iat[0,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dfUrl = pd.read_hdf('DevHDF5/DocId.hdf5', 'url')\n",
-    "# dfUrl[500][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dfLenRead = pd.read_hdf('DevHDF5/DocId.hdf5', 'docLen')\n",
-    "# dfLenRead[10][0]"
    ]
   },
   {
@@ -333,6 +303,166 @@
     "print(aTerms['artifici']['docIds'])\n",
     "print(aTerms['artifici']['df'])\n",
     "aTerms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    http://archive.ics.uci.edu/ml/machine-learning...\n",
+      "Name: 1234, dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>4991</th>\n",
+       "      <th>4992</th>\n",
+       "      <th>4993</th>\n",
+       "      <th>4994</th>\n",
+       "      <th>4995</th>\n",
+       "      <th>4996</th>\n",
+       "      <th>4997</th>\n",
+       "      <th>4998</th>\n",
+       "      <th>4999</th>\n",
+       "      <th>5000</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://aiclub.ics.uci.edu/</td>\n",
+       "      <td>https://aiclub.ics.uci.edu/#body</td>\n",
+       "      <td>https://aiclub.ics.uci.edu/index.html</td>\n",
+       "      <td>http://alderis.ics.uci.edu/links.html</td>\n",
+       "      <td>http://alderis.ics.uci.edu/publications.html</td>\n",
+       "      <td>http://alderis.ics.uci.edu/</td>\n",
+       "      <td>http://alderis.ics.uci.edu/dresystems.html</td>\n",
+       "      <td>http://alderis.ics.uci.edu/amba2.html</td>\n",
+       "      <td>http://alderis.ics.uci.edu/index.html</td>\n",
+       "      <td>http://alderis.ics.uci.edu/downloads.html</td>\n",
+       "      <td>...</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/blog/wrccdc-2019/</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/blog/wrccdc-qual...</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/sponsor/</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/blog/HackLAN/</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/blog/new-website/</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/blog/ccdc-worksh...</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/board/</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/blog/ccdc-start/</td>\n",
+       "      <td>https://cyberclub.ics.uci.edu/ccdc/</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 5000 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          1                                 2     \\\n",
+       "0  https://aiclub.ics.uci.edu/  https://aiclub.ics.uci.edu/#body   \n",
+       "\n",
+       "                                    3     \\\n",
+       "0  https://aiclub.ics.uci.edu/index.html   \n",
+       "\n",
+       "                                    4     \\\n",
+       "0  http://alderis.ics.uci.edu/links.html   \n",
+       "\n",
+       "                                           5                            6     \\\n",
+       "0  http://alderis.ics.uci.edu/publications.html  http://alderis.ics.uci.edu/   \n",
+       "\n",
+       "                                         7     \\\n",
+       "0  http://alderis.ics.uci.edu/dresystems.html   \n",
+       "\n",
+       "                                    8     \\\n",
+       "0  http://alderis.ics.uci.edu/amba2.html   \n",
+       "\n",
+       "                                    9     \\\n",
+       "0  http://alderis.ics.uci.edu/index.html   \n",
+       "\n",
+       "                                        10    ...  \\\n",
+       "0  http://alderis.ics.uci.edu/downloads.html  ...   \n",
+       "\n",
+       "                                              4991  \\\n",
+       "0  https://cyberclub.ics.uci.edu/blog/wrccdc-2019/   \n",
+       "\n",
+       "                                                4992  \\\n",
+       "0  https://cyberclub.ics.uci.edu/blog/wrccdc-qual...   \n",
+       "\n",
+       "                                     4993  \\\n",
+       "0  https://cyberclub.ics.uci.edu/sponsor/   \n",
+       "\n",
+       "                                          4994  \\\n",
+       "0  https://cyberclub.ics.uci.edu/blog/HackLAN/   \n",
+       "\n",
+       "                                              4995  \\\n",
+       "0  https://cyberclub.ics.uci.edu/blog/new-website/   \n",
+       "\n",
+       "                                                4996  \\\n",
+       "0  https://cyberclub.ics.uci.edu/blog/ccdc-worksh...   \n",
+       "\n",
+       "                                   4997                            4998  \\\n",
+       "0  https://cyberclub.ics.uci.edu/board/  https://cyberclub.ics.uci.edu/   \n",
+       "\n",
+       "                                             4999  \\\n",
+       "0  https://cyberclub.ics.uci.edu/blog/ccdc-start/   \n",
+       "\n",
+       "                                  5000  \n",
+       "0  https://cyberclub.ics.uci.edu/ccdc/  \n",
+       "\n",
+       "[1 rows x 5000 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def getDocKey(docId:int, N = 60000):\n",
+    "    for doc in range(0,N+1,5000):\n",
+    "        if docId <= doc:\n",
+    "            return str(doc)\n",
+    "\n",
+    "docId = 1234\n",
+    "docIds = pd.read_hdf('DevHDF5/DocId.hdf5', getDocKey(docId))\n",
+    "\n",
+    "print(docIds[docId])\n",
+    "docIds"
    ]
   }
  ],
