--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -464,6 +464,18 @@
     "print(docIds[docId])\n",
     "docIds"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Todo:\n",
+    "# Get DocLen\n",
+    "# Get TermFreq\n",
+    "    #{term:{{docId:tf/DocLen, docId2: tf2/DocLen},df:dfNum}}"
+   ]
   }
  ],
  "metadata": {
