add weight todo

--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -474,7 +474,8 @@
     "#Todo:\n",
     "# Get DocLen\n",
     "# Get TermFreq\n",
-    "    #{term:{{docId:tf/DocLen, docId2: tf2/DocLen},df:dfNum}}"
+    "    #{term:{{docId:tf/DocLen, docId2: tf2/DocLen},df:dfNum}}\n",
+    "# Calc Weight, Create weight dict"
    ]
   }
  ],
