--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -462,9 +462,10 @@
    "outputs": [],
    "source": [
     "#Todo:\n",
-    "# Get DocLen\n",
-    "# Get TermFreq\n",
+    "# Store DocLen\n",
+    "# Store TermFreq\n",
     "    #{term:{{docId:tf/DocLen, docId2: tf2/DocLen},df:dfNum}}\n",
+    "    # Bool first 50\n",
     "# Calc Weight, Create weight dict"
    ]
   }
