update docid print

--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -297,15 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    http://archive.ics.uci.edu/ml/machine-learning...\n",
-      "Name: 1234, dtype: object\n"
+      "http://archive.ics.uci.edu/ml/machine-learning-databases/eeg-mld/\n"
      ]
     },
     {
@@ -437,7 +436,7 @@
        "[1 rows x 5000 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +450,7 @@
     "docId = 1234\n",
     "docIds = pd.read_hdf('DevHDF5/DocId.hdf5', getDocKey(docId))\n",
     "\n",
-    "print(docIds[docId])\n",
+    "print(docIds[docId][0])\n",
     "docIds"
    ]
   },
