--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -467,6 +467,492 @@
     "    # Bool first 50\n",
     "# Calc Weight, Create weight dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 1047, 24, 1053, 544, 545, 34, 1060, 1572, 550, 1063, 552, 41, 554, 1069, 47, 48, 559, 563, 1077, 55, 56, 568, 58, 1081, 1082, 1596, 63, 1087, 65, 1091, 1092, 1603, 1096, 585, 588, 78, 79, 1614, 594, 1618, 85, 1110, 1111, 1113, 96, 99, 612, 1123, 1126, 104, 1643, 112, 626, 115, 116, 1144, 128, 129, 640, 2176, 133, 1158, 139, 140, 1166, 655, 144, 1172, 149, 662, 663, 152, 667, 1186, 1698, 164, 1191, 680, 1195, 1197, 1198, 687, 1199, 183, 184, 188, 701, 707, 2248, 715, 716, 1229, 1235, 725, 1239, 1241, 219, 731, 732, 1248, 227, 2276, 743, 745, 234, 243, 755, 1269, 247, 1276, 253, 1279, 770, 259, 1284, 1289, 267, 779, 782, 271, 784, 785, 1808, 788, 277, 796, 287, 800, 801, 293, 806, 807, 811, 304, 307, 820, 311, 312, 823, 1337, 1341, 318, 319, 836, 325, 326, 330, 331, 847, 857, 1882, 1888, 353, 359, 361, 874, 881, 882, 885, 889, 381, 893, 899, 388, 389, 902, 904, 912, 401, 2455, 1434, 1441, 930, 420, 421, 936, 940, 432, 948, 440, 442, 445, 451, 459, 979, 469, 982, 471, 985, 988, 478, 479, 482, 485, 494, 500, 501, 502, 508, 510}\n",
+      "209\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artifici</th>\n",
+       "      <th>ai</th>\n",
+       "      <th>about</th>\n",
+       "      <th>at</th>\n",
+       "      <th>a</th>\n",
+       "      <th>and</th>\n",
+       "      <th>applic</th>\n",
+       "      <th>among</th>\n",
+       "      <th>academia</th>\n",
+       "      <th>almuni</th>\n",
+       "      <th>...</th>\n",
+       "      <th>atox1</th>\n",
+       "      <th>arpp19</th>\n",
+       "      <th>aw047730</th>\n",
+       "      <th>arhgap32</th>\n",
+       "      <th>acsl6</th>\n",
+       "      <th>au040320</th>\n",
+       "      <th>apod</th>\n",
+       "      <th>a030009h04rik</th>\n",
+       "      <th>adal</th>\n",
+       "      <th>a930024n18rik</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>docIds</th>\n",
+       "      <td>{1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 10...</td>\n",
+       "      <td>{1, 2, 3, 1042, 1555, 2082, 1572, 41, 554, 56,...</td>\n",
+       "      <td>{1, 2, 3, 11, 12, 13, 14, 17, 20, 21, 22, 24, ...</td>\n",
+       "      <td>{1, 2, 3, 4, 2049, 6, 7, 9, 10, 11, 12, 15, 16...</td>\n",
+       "      <td>{1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 13, 14, 2058...</td>\n",
+       "      <td>{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...</td>\n",
+       "      <td>{1, 2, 1539, 3, 5, 6, 7, 1032, 9, 522, 1033, 2...</td>\n",
+       "      <td>{128, 1, 2, 3, 643, 2176, 1287, 776, 14, 272, ...</td>\n",
+       "      <td>{1, 2, 3, 1138, 1299}</td>\n",
+       "      <td>{1, 2, 3}</td>\n",
+       "      <td>...</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "      <td>{2738}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>df</th>\n",
+       "      <td>209</td>\n",
+       "      <td>82</td>\n",
+       "      <td>694</td>\n",
+       "      <td>1222</td>\n",
+       "      <td>880</td>\n",
+       "      <td>1812</td>\n",
+       "      <td>231</td>\n",
+       "      <td>72</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 3183 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 artifici  \\\n",
+       "docIds  {1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 10...   \n",
+       "df                                                    209   \n",
+       "\n",
+       "                                                       ai  \\\n",
+       "docIds  {1, 2, 3, 1042, 1555, 2082, 1572, 41, 554, 56,...   \n",
+       "df                                                     82   \n",
+       "\n",
+       "                                                    about  \\\n",
+       "docIds  {1, 2, 3, 11, 12, 13, 14, 17, 20, 21, 22, 24, ...   \n",
+       "df                                                    694   \n",
+       "\n",
+       "                                                       at  \\\n",
+       "docIds  {1, 2, 3, 4, 2049, 6, 7, 9, 10, 11, 12, 15, 16...   \n",
+       "df                                                   1222   \n",
+       "\n",
+       "                                                        a  \\\n",
+       "docIds  {1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 13, 14, 2058...   \n",
+       "df                                                    880   \n",
+       "\n",
+       "                                                      and  \\\n",
+       "docIds  {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...   \n",
+       "df                                                   1812   \n",
+       "\n",
+       "                                                   applic  \\\n",
+       "docIds  {1, 2, 1539, 3, 5, 6, 7, 1032, 9, 522, 1033, 2...   \n",
+       "df                                                    231   \n",
+       "\n",
+       "                                                    among  \\\n",
+       "docIds  {128, 1, 2, 3, 643, 2176, 1287, 776, 14, 272, ...   \n",
+       "df                                                     72   \n",
+       "\n",
+       "                     academia     almuni  ...   atox1  arpp19 aw047730  \\\n",
+       "docIds  {1, 2, 3, 1138, 1299}  {1, 2, 3}  ...  {2738}  {2738}   {2738}   \n",
+       "df                          5          3  ...       1       1        1   \n",
+       "\n",
+       "       arhgap32   acsl6 au040320    apod a030009h04rik    adal a930024n18rik  \n",
+       "docIds   {2738}  {2738}   {2738}  {2738}        {2738}  {2738}        {2738}  \n",
+       "df            1       1        1       1             1       1             1  \n",
+       "\n",
+       "[2 rows x 3183 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "aTerms = pd.read_hdf('DevHDF5/TermMeta.hdf5', 'a')\n",
+    "print(aTerms['artifici']['docIds'])\n",
+    "print(aTerms['artifici']['df'])\n",
+    "aTerms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "artifici         {1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 10...\n",
+      "ai               {1, 2, 3, 1042, 1555, 2082, 1572, 41, 554, 56,...\n",
+      "about            {1, 2, 3, 11, 12, 13, 14, 17, 20, 21, 22, 24, ...\n",
+      "at               {1, 2, 3, 4, 2049, 6, 7, 9, 10, 11, 12, 15, 16...\n",
+      "a                {1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 13, 14, 2058...\n",
+      "                                       ...                        \n",
+      "au040320                                                    {2738}\n",
+      "apod                                                        {2738}\n",
+      "a030009h04rik                                               {2738}\n",
+      "adal                                                        {2738}\n",
+      "a930024n18rik                                               {2738}\n",
+      "Name: docIds, Length: 3183, dtype: object\n",
+      "artifici          209\n",
+      "ai                 82\n",
+      "about             694\n",
+      "at               1222\n",
+      "a                 880\n",
+      "                 ... \n",
+      "au040320            1\n",
+      "apod                1\n",
+      "a030009h04rik       1\n",
+      "adal                1\n",
+      "a930024n18rik       1\n",
+      "Name: df, Length: 3183, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, row in aTerms.iterrows():\n",
+    "    word = str(row).split()\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['docIds', 'df'], dtype='object')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aTerms.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3183 entries, artifici to a930024n18rik\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   docIds  3183 non-null   object\n",
+      " 1   df      3183 non-null   int32 \n",
+      "dtypes: int32(1), object(1)\n",
+      "memory usage: 191.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "aTerms = aTerms.transpose()\n",
+    "#Insert Terms column as string\n",
+    "aTerms['df'] = aTerms['df'].astype('int32')\n",
+    "aTerms.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 24,\n",
+       " 34,\n",
+       " 41,\n",
+       " 47,\n",
+       " 48,\n",
+       " 55,\n",
+       " 56,\n",
+       " 58,\n",
+       " 63,\n",
+       " 65,\n",
+       " 78,\n",
+       " 79,\n",
+       " 85,\n",
+       " 96,\n",
+       " 99,\n",
+       " 104,\n",
+       " 112,\n",
+       " 115,\n",
+       " 116,\n",
+       " 128,\n",
+       " 129,\n",
+       " 133,\n",
+       " 139,\n",
+       " 140,\n",
+       " 144,\n",
+       " 149,\n",
+       " 152,\n",
+       " 164,\n",
+       " 183,\n",
+       " 184,\n",
+       " 188,\n",
+       " 219,\n",
+       " 227,\n",
+       " 234,\n",
+       " 243,\n",
+       " 247,\n",
+       " 253,\n",
+       " 259,\n",
+       " 267,\n",
+       " 271,\n",
+       " 277,\n",
+       " 287,\n",
+       " 293,\n",
+       " 304,\n",
+       " 307,\n",
+       " 311,\n",
+       " 312,\n",
+       " 318,\n",
+       " 319,\n",
+       " 325,\n",
+       " 326,\n",
+       " 330,\n",
+       " 331,\n",
+       " 353,\n",
+       " 359,\n",
+       " 361,\n",
+       " 381,\n",
+       " 388,\n",
+       " 389,\n",
+       " 401,\n",
+       " 420,\n",
+       " 421,\n",
+       " 432,\n",
+       " 440,\n",
+       " 442,\n",
+       " 445,\n",
+       " 451,\n",
+       " 459,\n",
+       " 469,\n",
+       " 471,\n",
+       " 478,\n",
+       " 479,\n",
+       " 482,\n",
+       " 485,\n",
+       " 494,\n",
+       " 500,\n",
+       " 501,\n",
+       " 502,\n",
+       " 508,\n",
+       " 510,\n",
+       " 513,\n",
+       " 534,\n",
+       " 544,\n",
+       " 545,\n",
+       " 550,\n",
+       " 552,\n",
+       " 554,\n",
+       " 559,\n",
+       " 563,\n",
+       " 568,\n",
+       " 585,\n",
+       " 588,\n",
+       " 594,\n",
+       " 612,\n",
+       " 626,\n",
+       " 640,\n",
+       " 655,\n",
+       " 662,\n",
+       " 663,\n",
+       " 667,\n",
+       " 680,\n",
+       " 687,\n",
+       " 701,\n",
+       " 707,\n",
+       " 715,\n",
+       " 716,\n",
+       " 725,\n",
+       " 731,\n",
+       " 732,\n",
+       " 743,\n",
+       " 745,\n",
+       " 755,\n",
+       " 770,\n",
+       " 779,\n",
+       " 782,\n",
+       " 784,\n",
+       " 785,\n",
+       " 788,\n",
+       " 796,\n",
+       " 800,\n",
+       " 801,\n",
+       " 806,\n",
+       " 807,\n",
+       " 811,\n",
+       " 820,\n",
+       " 823,\n",
+       " 836,\n",
+       " 847,\n",
+       " 857,\n",
+       " 874,\n",
+       " 881,\n",
+       " 882,\n",
+       " 885,\n",
+       " 889,\n",
+       " 893,\n",
+       " 899,\n",
+       " 902,\n",
+       " 904,\n",
+       " 912,\n",
+       " 930,\n",
+       " 936,\n",
+       " 940,\n",
+       " 948,\n",
+       " 979,\n",
+       " 982,\n",
+       " 985,\n",
+       " 988,\n",
+       " 1028,\n",
+       " 1032,\n",
+       " 1034,\n",
+       " 1047,\n",
+       " 1053,\n",
+       " 1060,\n",
+       " 1063,\n",
+       " 1069,\n",
+       " 1077,\n",
+       " 1081,\n",
+       " 1082,\n",
+       " 1087,\n",
+       " 1091,\n",
+       " 1092,\n",
+       " 1096,\n",
+       " 1110,\n",
+       " 1111,\n",
+       " 1113,\n",
+       " 1123,\n",
+       " 1126,\n",
+       " 1144,\n",
+       " 1158,\n",
+       " 1166,\n",
+       " 1172,\n",
+       " 1186,\n",
+       " 1191,\n",
+       " 1195,\n",
+       " 1197,\n",
+       " 1198,\n",
+       " 1199,\n",
+       " 1229,\n",
+       " 1235,\n",
+       " 1239,\n",
+       " 1241,\n",
+       " 1248,\n",
+       " 1269,\n",
+       " 1276,\n",
+       " 1279,\n",
+       " 1284,\n",
+       " 1289,\n",
+       " 1337,\n",
+       " 1341,\n",
+       " 1434,\n",
+       " 1441,\n",
+       " 1555,\n",
+       " 1572,\n",
+       " 1596,\n",
+       " 1603,\n",
+       " 1614,\n",
+       " 1618,\n",
+       " 1643,\n",
+       " 1698,\n",
+       " 1808,\n",
+       " 1882,\n",
+       " 1888,\n",
+       " 2176,\n",
+       " 2248,\n",
+       " 2276,\n",
+       " 2455}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(aTerms['docIds']['artifici'])"
+   ]
   }
  ],
  "metadata": {
