write term pos to file

--- a/ParseToken.ipynb
+++ b/ParseToken.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from HelperClass import InvertedIndex\n",
+    "import pandas as pd\n",
+    "\n",
     "invIndex = InvertedIndex()\n",
     "invIndex.loadAll('DevShelve')\n",
     "\n",
@@ -16,49 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1049"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "dfLenRead = pd.read_hdf('DevHDF5/DocId.hdf5', 'docLen')\n",
-    "dfLenRead[11][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ToDo split into a-f etc and get top 10k words\n",
     "\n",
-    "tfDict = {} #{token:{docId,tf}}\n",
-    "count = 0\n",
+    "tfDict = {} #{token:{docId:tf}}\n",
     "for term in invIndex['pos']:\n",
     "    dfCount = len(invIndex['pos'][term])\n",
     "    tfDict[term] = {}\n",
     "    for docId in invIndex['pos'][term]:\n",
-    "        tfDict[term].update({docId: len(invIndex['pos'][term][docId])})\n",
-    "        count += 1\n",
-    "        if count > 10000:\n",
-    "            break"
+    "        tfDict[term].update({docId: len(invIndex['pos'][term][docId])})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,34 +51,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df_from_dict(tfDict,True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# df = df_from_dict(idfDict)\n",
     "# df.to_hdf(f'DevHDF5/TermInfo.hdf5', key='idf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ToDo split into a-f etc and get top 10k words\n",
     "\n",
-    "termDict = {} #{term:{{docIds:{docId}},df:dfNum}}\n",
-    "for term in invIndex['pos']:\n",
-    "    docSet = set()\n",
-    "    dfCount = len(invIndex['pos'][term])\n",
-    "    for docId in invIndex['pos'][term]:\n",
-    "        docSet.add(docId)\n",
-    "    termDict[term] = {'docIds':docSet, 'df':dfCount}"
+    "# termDict = {} #{term:{{docIds:{docId}},df:dfNum}}\n",
+    "# for term in invIndex['pos']:\n",
+    "#     docSet = set()\n",
+    "#     dfCount = len(invIndex['pos'][term])\n",
+    "#     for docId in invIndex['pos'][term]:\n",
+    "#         docSet.add(docId)\n",
+    "#     termDict[term] = {'docIds':docSet, 'df':dfCount}"
    ]
   },
   {
@@ -161,6 +128,73 @@
     "#                 print(term)\n",
     "                # df = df.assign(**{term:termDict[term]})\n",
     "# df.to_hdf(f'DevHDF5/TermMeta.hdf5', key='num')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"60\": 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "json_str = json.dumps(tfDict['hello'])\n",
+    "json_dict = json.loads(json_str)\n",
+    "print(json_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jsonDict = {}\n",
+    "for term in tfDict:\n",
+    "    jsonDict[term] = json.dumps(tfDict[term])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 356273 entries, artifici to 2510003e04rik\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column  Non-Null Count   Dtype \n",
+      "---  ------  --------------   ----- \n",
+      " 0   Terms   356273 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 5.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df_from_dict(jsonDict).transpose()\n",
+    "df.columns = ['Terms']\n",
+    "df['Terms'] = df['Terms'].astype(str)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_hdf(f'DevHDF5/Terms.hdf5', key='terms')"
    ]
   }
  ],
