--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -629,7 +629,6 @@
     }
    ],
    "source": [
-    "\n",
     "aTerms = pd.read_hdf('DevHDF5/TermMeta.hdf5', 'a')\n",
     "print(aTerms['artifici']['docIds'])\n",
     "print(aTerms['artifici']['df'])\n",
@@ -741,6 +740,28 @@
    ],
    "source": [
     "print(aTerms['docIds']['artifici'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"60\": 1}'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "terms = pd.read_hdf('DevHDF5/Terms.hdf5', 'terms')\n",
+    "terms['Terms']['hello']"
    ]
   }
  ],
