--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -297,14 +297,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://archive.ics.uci.edu/ml/machine-learning-databases/eeg-mld/\n"
+      "https://www.informatics.uci.edu/sydney-morning-herald-wordplay-a-cryptic-shaped-hole-mark-cited/\n",
+      "643\n"
      ]
     },
     {
@@ -328,115 +329,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>4991</th>\n",
-       "      <th>4992</th>\n",
-       "      <th>4993</th>\n",
-       "      <th>4994</th>\n",
-       "      <th>4995</th>\n",
-       "      <th>4996</th>\n",
-       "      <th>4997</th>\n",
-       "      <th>4998</th>\n",
-       "      <th>4999</th>\n",
-       "      <th>5000</th>\n",
+       "      <th>url</th>\n",
+       "      <th>docLen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://aiclub.ics.uci.edu/</td>\n",
-       "      <td>https://aiclub.ics.uci.edu/#body</td>\n",
-       "      <td>https://aiclub.ics.uci.edu/index.html</td>\n",
-       "      <td>http://alderis.ics.uci.edu/links.html</td>\n",
-       "      <td>http://alderis.ics.uci.edu/publications.html</td>\n",
-       "      <td>http://alderis.ics.uci.edu/</td>\n",
-       "      <td>http://alderis.ics.uci.edu/dresystems.html</td>\n",
-       "      <td>http://alderis.ics.uci.edu/amba2.html</td>\n",
-       "      <td>http://alderis.ics.uci.edu/index.html</td>\n",
-       "      <td>http://alderis.ics.uci.edu/downloads.html</td>\n",
+       "      <th>55001</th>\n",
+       "      <td>https://www.informatics.uci.edu/grant-helps-pr...</td>\n",
+       "      <td>763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55002</th>\n",
+       "      <td>https://www.informatics.uci.edu/financial-post...</td>\n",
+       "      <td>651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55003</th>\n",
+       "      <td>https://www.informatics.uci.edu/undergrad/stud...</td>\n",
+       "      <td>982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55004</th>\n",
+       "      <td>https://www.informatics.uci.edu/undergrad/stud...</td>\n",
+       "      <td>892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55005</th>\n",
+       "      <td>https://www.informatics.uci.edu/the-new-york-t...</td>\n",
+       "      <td>640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/blog/wrccdc-2019/</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/blog/wrccdc-qual...</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/sponsor/</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/blog/HackLAN/</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/blog/new-website/</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/blog/ccdc-worksh...</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/board/</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/blog/ccdc-start/</td>\n",
-       "      <td>https://cyberclub.ics.uci.edu/ccdc/</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55378</th>\n",
+       "      <td>http://xtune.ics.uci.edu/sponsor.htm</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55379</th>\n",
+       "      <td>http://xtune.ics.uci.edu/news.htm</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55380</th>\n",
+       "      <td>http://xtune.ics.uci.edu/xtune-pub.htm</td>\n",
+       "      <td>356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55381</th>\n",
+       "      <td>http://xtune.ics.uci.edu/link.htm</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55382</th>\n",
+       "      <td>http://xtune.ics.uci.edu/</td>\n",
+       "      <td>256</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 5000 columns</p>\n",
+       "<p>382 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          1                                 2     \\\n",
-       "0  https://aiclub.ics.uci.edu/  https://aiclub.ics.uci.edu/#body   \n",
+       "                                                     url  docLen\n",
+       "55001  https://www.informatics.uci.edu/grant-helps-pr...     763\n",
+       "55002  https://www.informatics.uci.edu/financial-post...     651\n",
+       "55003  https://www.informatics.uci.edu/undergrad/stud...     982\n",
+       "55004  https://www.informatics.uci.edu/undergrad/stud...     892\n",
+       "55005  https://www.informatics.uci.edu/the-new-york-t...     640\n",
+       "...                                                  ...     ...\n",
+       "55378               http://xtune.ics.uci.edu/sponsor.htm      37\n",
+       "55379                  http://xtune.ics.uci.edu/news.htm      53\n",
+       "55380             http://xtune.ics.uci.edu/xtune-pub.htm     356\n",
+       "55381                  http://xtune.ics.uci.edu/link.htm      53\n",
+       "55382                          http://xtune.ics.uci.edu/     256\n",
        "\n",
-       "                                    3     \\\n",
-       "0  https://aiclub.ics.uci.edu/index.html   \n",
-       "\n",
-       "                                    4     \\\n",
-       "0  http://alderis.ics.uci.edu/links.html   \n",
-       "\n",
-       "                                           5                            6     \\\n",
-       "0  http://alderis.ics.uci.edu/publications.html  http://alderis.ics.uci.edu/   \n",
-       "\n",
-       "                                         7     \\\n",
-       "0  http://alderis.ics.uci.edu/dresystems.html   \n",
-       "\n",
-       "                                    8     \\\n",
-       "0  http://alderis.ics.uci.edu/amba2.html   \n",
-       "\n",
-       "                                    9     \\\n",
-       "0  http://alderis.ics.uci.edu/index.html   \n",
-       "\n",
-       "                                        10    ...  \\\n",
-       "0  http://alderis.ics.uci.edu/downloads.html  ...   \n",
-       "\n",
-       "                                              4991  \\\n",
-       "0  https://cyberclub.ics.uci.edu/blog/wrccdc-2019/   \n",
-       "\n",
-       "                                                4992  \\\n",
-       "0  https://cyberclub.ics.uci.edu/blog/wrccdc-qual...   \n",
-       "\n",
-       "                                     4993  \\\n",
-       "0  https://cyberclub.ics.uci.edu/sponsor/   \n",
-       "\n",
-       "                                          4994  \\\n",
-       "0  https://cyberclub.ics.uci.edu/blog/HackLAN/   \n",
-       "\n",
-       "                                              4995  \\\n",
-       "0  https://cyberclub.ics.uci.edu/blog/new-website/   \n",
-       "\n",
-       "                                                4996  \\\n",
-       "0  https://cyberclub.ics.uci.edu/blog/ccdc-worksh...   \n",
-       "\n",
-       "                                   4997                            4998  \\\n",
-       "0  https://cyberclub.ics.uci.edu/board/  https://cyberclub.ics.uci.edu/   \n",
-       "\n",
-       "                                             4999  \\\n",
-       "0  https://cyberclub.ics.uci.edu/blog/ccdc-start/   \n",
-       "\n",
-       "                                  5000  \n",
-       "0  https://cyberclub.ics.uci.edu/ccdc/  \n",
-       "\n",
-       "[1 rows x 5000 columns]"
+       "[382 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,10 +422,11 @@
     "        if docId <= doc:\n",
     "            return str(doc)\n",
     "\n",
-    "docId = 1234\n",
+    "docId = 55111\n",
     "docIds = pd.read_hdf('DevHDF5/DocId.hdf5', getDocKey(docId))\n",
     "\n",
-    "print(docIds[docId][0])\n",
+    "print(docIds['url'][docId])\n",
+    "print(docIds['docLen'][docId])\n",
     "docIds"
    ]
   },
@@ -461,7 +437,6 @@
    "outputs": [],
    "source": [
     "#Todo:\n",
-    "# Store DocLen\n",
     "# Store TermFreq\n",
     "    #{term:{{docId:tf/DocLen, docId2: tf2/DocLen},df:dfNum}}\n",
     "    # Bool first 50\n",
@@ -637,113 +612,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artifici         {1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 10...\n",
-      "ai               {1, 2, 3, 1042, 1555, 2082, 1572, 41, 554, 56,...\n",
-      "about            {1, 2, 3, 11, 12, 13, 14, 17, 20, 21, 22, 24, ...\n",
-      "at               {1, 2, 3, 4, 2049, 6, 7, 9, 10, 11, 12, 15, 16...\n",
-      "a                {1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 13, 14, 2058...\n",
-      "                                       ...                        \n",
-      "au040320                                                    {2738}\n",
-      "apod                                                        {2738}\n",
-      "a030009h04rik                                               {2738}\n",
-      "adal                                                        {2738}\n",
-      "a930024n18rik                                               {2738}\n",
-      "Name: docIds, Length: 3183, dtype: object\n",
-      "artifici          209\n",
-      "ai                 82\n",
-      "about             694\n",
-      "at               1222\n",
-      "a                 880\n",
-      "                 ... \n",
-      "au040320            1\n",
-      "apod                1\n",
-      "a030009h04rik       1\n",
-      "adal                1\n",
-      "a930024n18rik       1\n",
-      "Name: df, Length: 3183, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, row in aTerms.iterrows():\n",
-    "    word = str(row).split()\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['docIds', 'df'], dtype='object')"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aTerms.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3183 entries, artifici to a930024n18rik\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   docIds  3183 non-null   object\n",
-      " 1   df      3183 non-null   int32 \n",
-      "dtypes: int32(1), object(1)\n",
-      "memory usage: 191.2+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "aTerms = aTerms.transpose()\n",
-    "#Insert Terms column as string\n",
-    "aTerms['df'] = aTerms['df'].astype('int32')\n",
-    "aTerms.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 1047, 24, 1053, 544, 545, 34, 1060, 1572, 550, 1063, 552, 41, 554, 1069, 47, 48, 559, 563, 1077, 55, 56, 568, 58, 1081, 1082, 1596, 63, 1087, 65, 1091, 1092, 1603, 1096, 585, 588, 78, 79, 1614, 594, 1618, 85, 1110, 1111, 1113, 96, 99, 612, 1123, 1126, 104, 1643, 112, 626, 115, 116, 1144, 128, 129, 640, 2176, 133, 1158, 139, 140, 1166, 655, 144, 1172, 149, 662, 663, 152, 667, 1186, 1698, 164, 1191, 680, 1195, 1197, 1198, 687, 1199, 183, 184, 188, 701, 707, 2248, 715, 716, 1229, 1235, 725, 1239, 1241, 219, 731, 732, 1248, 227, 2276, 743, 745, 234, 243, 755, 1269, 247, 1276, 253, 1279, 770, 259, 1284, 1289, 267, 779, 782, 271, 784, 785, 1808, 788, 277, 796, 287, 800, 801, 293, 806, 807, 811, 304, 307, 820, 311, 312, 823, 1337, 1341, 318, 319, 836, 325, 326, 330, 331, 847, 857, 1882, 1888, 353, 359, 361, 874, 881, 882, 885, 889, 381, 893, 899, 388, 389, 902, 904, 912, 401, 2455, 1434, 1441, 930, 420, 421, 936, 940, 432, 948, 440, 442, 445, 451, 459, 979, 469, 982, 471, 985, 988, 478, 479, 482, 485, 494, 500, 501, 502, 508, 510}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(aTerms['docIds']['artifici'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -759,7 +627,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "terms = pd.read_hdf('DevHDF5/Terms.hdf5', 'terms')\n",
     "terms['Terms']['hello']"
    ]
