--- a/QueryRank.ipynb
+++ b/QueryRank.ipynb
@@ -165,7 +165,7 @@
     "qWords = stemQuery(\"fox dog and\") # ['fox', 'dog', 'and']\n",
     "docIds = getDocIds(qWords) #{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ... }\n",
     "idf_dict = getIdfDict(qWords) #{'fox': 7.007990707741848, 'dog': 5.623194474242979, 'and': 4.930297199969477}\n",
-    "inverted_index_tfs = getInvertedTfDict(qWords, docIds) #{'fox': {'doc1': 0.1111111111111111, 'doc2': 0, 'doc3': 0.3333333333333333}, 'dog': {'doc1': 0.1111111111111111, ...."
+    "inverted_index_tfs = getInvertedTfDict(qWords, docIds) #{'fox': {'doc1': 0.1111111111111111, 'doc2': 0, 'doc3': 0.3333333333333333}, 'dog': {'doc1': 0.1111111111111111, .... }"
    ]
   },
   {
