--- a/QueryRank.ipynb
+++ b/QueryRank.ipynb
@@ -96,13 +96,13 @@
     "    return queryList\n",
     "\n",
     "def getDf(term:str) -> int:\n",
-    "    df = pd.read_hdf('DevHDF5/TermMeta.hdf5', term[0])\n",
+    "    df = pd.read_hdf('Data/TermMeta.hdf5', term[0])\n",
     "    if term in df:\n",
     "        return df[term]['df']\n",
     "    return 0\n",
     "\n",
     "def getTermDocId(term:str) -> int:\n",
-    "    df = pd.read_hdf('DevHDF5/TermMeta.hdf5', term[0])\n",
+    "    df = pd.read_hdf('Data/TermMeta.hdf5', term[0])\n",
     "    if term in df:\n",
     "        return df[term]['docIds']\n",
     "    return 0\n",
@@ -113,11 +113,11 @@
     "            if docId <= doc:\n",
     "                return str(doc)\n",
     "        \n",
-    "    df = pd.read_hdf('DevHDF5/DocId.hdf5', getDocKey(docId))\n",
+    "    df = pd.read_hdf('Data/DocId.hdf5', getDocKey(docId))\n",
     "    return df['docLen'][docId]\n",
     "\n",
     "def getTf(term:str):\n",
-    "    df = pd.read_hdf('DevHDF5/Terms.hdf5', 'terms')\n",
+    "    df = pd.read_hdf('Data/Terms.hdf5', 'terms')\n",
     "    if term in df['Terms']:\n",
     "        return json.loads(df['Terms'][term])\n",
     "    return {}\n",
